<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/location_key"
        android:title="@string/setting_title_location"
        android:summary="@string/location_summary"
        android:defaultValue="@string/default_location"/>

    <ListPreference
        android:key="@string/temp_list"
        android:title="@string/tempture_mode"
        android:dialogTitle="@string/title_dialog"
        android:entries="@array/pref_temp_mode_entries"
        android:entryValues="@array/pref_temp_mode_values"
        android:defaultValue="@string/tempture_mode_default"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"
        />

</PreferenceScreen>